--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ["chainlink-brownie-contracts/=lib/chainlink-brownie-contracts/"]
+remappings = ["@chainlink-brownie-contracts/=lib/chainlink-brownie-contracts/"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
